--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,7 +11,7 @@ Rango
       <h2 style="color: #3f83a3">This is Rango</h2><br>
     </div>
     {% if user.is_authenticated %}
-        howdy {{ user.username }}{{ visits }}
+        howdy {{ user.username }}{{ visits }}{{ visits }}
     {% else %}
         howdy budyya!1!!
     {% endif %}
@@ -39,5 +39,6 @@ Rango
     <div class="">
       <a href={% url "rango:about" %}>About</a><br>
       <img src="{% static "images/samurai.jpg" %}" alt="GAY!" width="400px">
+    {{ visits }}
     </div>
 {%endblock%}
