--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,20 +1,21 @@
-
-
 .main-sidebar{
    position:fixed;
     padding-left: 0px;
+    left: 0px;
+    top: 0px;
    width:200px;
    height:100%;
    background-color: rgb(0, 81, 116);
    box-shadow: 0px 0px 2px #000000;
     z-index: 2;
 }
-
-.body-block{
-    margin-left: 200px;
-    padding-left: 15px;
-
+.login-container{
+    margin-top: 100px;
 }
+.main{
+    margin-left: 200px;
+}
+
 
 div.sidebar-btn{
     font-size: 20px;
@@ -47,5 +48,5 @@ div.sidebar-lower a{
 
 div.sidebar-lower a div{
     color: inherit;
-    font-size: 10px;
+    font-size: 11px;
 }
