--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,15 +1,22 @@
 {% extends "rango/base.html" %}
 {% block body_block %}
-    <h1>Login</h1>
-        <form action="." method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-                <input type="submit" value="Log in">
-                <input type="hidden" name="text" value="{{ next }}">
-        </form>
-        <p>
-            Not a member
-            <a href="{% url 'registration_register' %}">Register</a>
 
-        </p>
+
+    <div class="col-md-4 offset-md-4">
+        <div class="login-container">
+            <form action="." method="post" role="form" class="form-signin">
+                {% csrf_token %}
+                <br>
+                <h2 class="form-signin-heading">Sign In</h2>
+                <br>
+
+                <lable for="inputUsername" class="sr-only">Username</lable>
+                <input type="text" name="username" id="id_username" class="form-control" placeholder="Username" required autofocus>
+                <br>
+                <lable for="inputPassword" class="sr-only">Password</lable>
+                <input type="password" name="password" id="id_password" class="form-control" placeholder="Password" required>
+                <button type="submit" value="Submit" class="btn btn-lg btn-primary btn-block"> Sign in </button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
