--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -8,21 +8,25 @@
         How to Tango with Django!
       {% endblock %}
     </title>
-
+    <script src="{% static '/js/jQuery.js' %}"></script>
     <link rel="stylesheet" href="{% static '/css/base.css' %}">
     <link rel="stylesheet" href="{% static '/css/bootstrap.css' %}">
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="{% static '/js/bootstrap.js' %}"></script>
+    <script src="{% static '/js/jquery-rango.js' %}"></script>
   </head>
   <body >
 
     {% load rango_template_tags%}
     <div class="main-sidebar">
 
-        {%block sidebar_block%}
-            {%get_category_list category%}
-        {%endblock%}
+        <input type="text" class="input-group search-query" name="suggestion" value="" id="suggestion" placeholder="Category">
+
+        <hr>
+
+        <div id="cats">
+            Placeholder
+        </div>
+
 
         <div class="sidebar-lower">
 
