--- a/templates/rango/cats.html
+++ b/templates/rango/cats.html
@@ -9,5 +9,6 @@
         {%endif%}
     {%endfor%}
 {%else%}
-    <strong>There are no categories</strong>
+    <strong>No results</strong>
+
 {%endif%}
