--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -5,6 +5,7 @@
 {%endblock%}
 
 {% block body_block %}
+    {{ user.username\ }}
     <div class="">
       {% if category %}
           <h1>{{category.name}}</h1>
