--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,11 +1,11 @@
-{% extends 'rango/base.html' %}
+{% extends 'rango/rango_base.html' %}
 {% load static %}
 {% block title_block %}
-Rango
+Index
 {%endblock%}
 
 
-{% block body_block %}
+{% block rango %}
     <h1>Rango</h1>
     <div class="">
       <h2 style="color: #3f83a3">This is Rango</h2><br>
