--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static%}
+<html>
 <head>
     <title>
 
@@ -16,16 +17,9 @@
   </head>
   <body >
 
-    {% load rango_template_tags%}
-    <div class="main-sidebar">
 
-        <input type="text" class="input-group search-query" name="suggestion" value="" id="suggestion" placeholder="Category">
-
-        <hr>
-
-        <div id="cats">
-            Placeholder
-        </div>
+    {% block secondary_sidebar_base %}
+    {% endblock %}
 
 
         <div class="sidebar-lower">
@@ -39,9 +33,14 @@
             <a href="{% url 'rango:add_category'%}"> <div>Add New Category</div></a>
             <a href="{% url 'rango:about'%}">        <div>About</div></a>
             <a href="{% url 'rango:index'%}">        <div>Home </div></a>
-
         </div>
-    </div>
+
+
+
+
+
+
+
 
     <div class="main">
       {%block body_block%}
