--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -1,4 +1,4 @@
-{% extends "rango/base.html" %}
+{% extends "rango/../common/base.html" %}
 {% block body_block %}
     <h1>Logged out!</h1>
 {% endblock %}
