--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,4 +1,4 @@
-{% extends "rango/base.html" %}
+{% extends "rango/../common/base.html" %}
 {% block body_block %}
     <h1>Password Succesfully changed</h1>
 
