--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,4 +1,4 @@
-{% extends "rango/base.html" %}
+{% extends "rango/../common/base.html" %}
 {% block body_block %}
     <h1>Change password here</h1>
     <form action="." method="post">
