--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -1,4 +1,4 @@
-{% extends "rango/base.html" %}
+{% extends "rango/../common/base.html" %}
 {% block body_block %}
     <h1>Registration Complete</h1>
     <p style="color: #008024">You are now registered! Yip Yip!</p>
