--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,4 +1,4 @@
-{% extends "rango/base.html" %}
+{% extends "rango/../common/base.html" %}
 {% block body_block %}
     <div class="col-md-4 offset-md-4">
     <h2 class="form-signin-heading">Sign Up Here</h2>
