--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% block body_block %}
 
 
-    <div class="col-md-4 offset-md-4">
+    <div class="col offset-md-4">
         <div class="login-container">
             <form action="." method="post" role="form" class="form-signin">
                 {% csrf_token %}
