--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,7 +14,7 @@
 }
 .main{
     margin-left: 400px;
-    background-color: #1d1e1f;
+    background-color: #d4d9dc;
     height: 100%;
     min-height: 1000px;
 }
@@ -56,7 +56,7 @@ div.sidebar-lower a div{
 
 .secondary-sidebar{
     position:fixed;
-    padding-left: 10px;
+    /*padding-left: 10px;*/
     left: 200px;
     top: 0px;
    width:200px;
