--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -11,9 +11,12 @@
     </title>
     <script src="{% static '/js/jQuery.js' %}"></script>
     <link rel="stylesheet" href="{% static '/css/base.css' %}">
-    <link rel="stylesheet" href="{% static '/css/bootstrap.css' %}">
-    <script src="{% static '/js/bootstrap.js' %}"></script>
+{#    <link rel="stylesheet" href="{% static '/css/bootstrap.css' %}">#}
+    <link rel="stylesheet" href="{% static '/css/materialize.css' %}">
+{#    <font rel="s" href="">#}
+{#    <script src="{% static '/js/bootstrap.js' %}"></script>#}
     <script src="{% static '/js/jquery-rango.js' %}"></script>
+    <script src="{% static '/js/materialize.js' %}"></script>
   </head>
 
   <body >
