--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,6 +1,6 @@
 {% extends "rango/../common/base.html" %}
 {% block body_block %}
-    <div class="col-md-4 offset-md-4">
+    <div class="col offset-md-4">
     <h2 class="form-signin-heading">Sign Up Here</h2>
 
     <form action="." role="form" method="post">
