--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,12 +12,6 @@
 .login-container{
     margin-top: 100px;
 }
-.main{
-    margin-left: 400px;
-    background-color: #d4d9dc;
-    height: 100%;
-    min-height: 1000px;
-}
 
 
 div.sidebar-btn{
@@ -31,40 +25,14 @@ div.sidebar-btn:hover{
     color: #e2e2e2;
 }
 
-div.main-sidebar a{
-    text-decoration: none;
-}
-
-div.sidebar-lower{
-    color: whitesmoke;
-    position: fixed;
-    bottom: 0px;
-    height: auto;
-    width: inherit;
-    text-align: center;
-}
-div.sidebar-lower a{
-    color: inherit;
-    text-decoration: none;
-}
 
 
-div.sidebar-lower a div{
-    color: inherit;
-    font-size: 11px;
-}
-
-.secondary-sidebar{
-    position:fixed;
-    /*padding-left: 10px;*/
-    left: 200px;
-    top: 0px;
-   width:200px;
-   height:100%;
-   background-color: rgb(0, 109, 116);
-   box-shadow: 0px 0px 2px #000000;
-    z-index: 1;
-
+.main-container{
+    background-color: rgba(157, 146, 144, 0.31);
+    padding: 50px;
+    height: 100%;
+    z-index: -2;
+    /*position: absolute;*/
 }
 
 body {
