--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -9,49 +9,68 @@
         How to Tango with Django!
       {% endblock %}
     </title>
+        {% block head %}
+
+        {% endblock %}
     <script src="{% static '/js/jQuery.js' %}"></script>
     <link rel="stylesheet" href="{% static '/css/base.css' %}">
 {#    <link rel="stylesheet" href="{% static '/css/bootstrap.css' %}">#}
     <link rel="stylesheet" href="{% static '/css/materialize.css' %}">
 {#    <font rel="s" href="">#}
 {#    <script src="{% static '/js/bootstrap.js' %}"></script>#}
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="{% static '/js/jquery-rango.js' %}"></script>
     <script src="{% static '/js/materialize.js' %}"></script>
+    <script src="{% static '/js/base.js' %}"></script>
   </head>
 
-  <body >
+  <body class="grey lighten-2">
+{#        <ul id="dropdown1" class="dropdown-content">#}
+{#            <li><a href="{% url 'conversations:friends' %}">Friends</a></li>#}
+{#            <li><a href="#!">Messages</a></li>#}
+{#        </ul>#}
 
+        <ul id="conversationsdd" class="dropdown-content">
+            <li><a href="#!">Friends</a></li>
+            <li><a href="#!">Messages</a></li>
+        </ul>
+    <nav >
+    <div class="nav-wrapper light-blue accent-4" >
 
-    <div class="main-sidebar">
-        <div class="site-navigation">
-            <ul>
-                <li><a href="{% url 'conversations:index' %}">Conversations</a></li>
-                <li><a href="{% url 'rango:index' %}">Rango</a></li>
-            </ul>
-        </div>
+        <a href="#!" class="brand-logo"><i class="material-icons">label_outline</i>MNLX</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="{% url 'rango:index' %}">Rango</a></li>
+{#          <li><a href="{% url 'conversations:friends' %}">Conversations</a></li>#}
+          <!-- Dropdown Trigger -->
+          <li><a class="dropdown-button" href="#!" data-activates="conversationsdd">Conversations<i class="material-icons right">arrow_drop_down</i></a></li>
 
-
-
-        <div class="sidebar-lower">
-
-          {% if user.is_authenticated %}
-            <a href="{% url 'auth_logout'%}"><div style="color:red"> Logout</div></a>
-          {% else %}
-            <a href="{% url 'registration_register'%}"><div> Register</div></a>
-            <a href="{% url 'auth_login'%}"> <div> Login</div></a>
-          {% endif %}
-            <a href="{% url 'rango:add_category'%}"> <div>Add New Category</div></a>
-            <a href="{% url 'rango:about'%}">        <div>About</div></a>
-            <a href="{% url 'rango:index'%}">        <div>Home </div></a>
-        </div>
+{#          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>#}
+        </ul>
     </div>
+    </nav>
+{##}
+{#        <div class="sidebar-lower">#}
+{##}
+{#          {% if user.is_authenticated %}#}
+{#            <a href="{% url 'auth_logout'%}"><div style="color:red"> Logout</div></a>#}
+{#          {% else %}#}
+{#            <a href="{% url 'registration_register'%}"><div> Register</div></a>#}
+{#            <a href="{% url 'auth_login'%}"> <div> Login</div></a>#}
+{#          {% endif %}#}
+{#            <a href="{% url 'rango:add_category'%}"> <div>Add New Category</div></a>#}
+{#            <a href="{% url 'rango:about'%}">        <div>About</div></a>#}
+{#            <a href="{% url 'rango:index'%}">        <div>Home </div></a>#}
+{#        </div>#}
+
 
     {% block secondary_sidebar_base %}
     {% endblock %}
 
-    <div class="main">
+    <div class="container white main-container z-depth-1">
+
       {%block body_block%}
       {%endblock%}
+
     </div>
   </body>
 </html>
