--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static from staticfiles %}
+{% load static %}
 <html>
 <head>
     <title>
@@ -10,13 +10,12 @@
       {% endblock %}
     </title>
 
-    <script src="{% static '/js/jQuery.js' %}"></script>
+
     <link rel="stylesheet" href="{% static '/css/base.css' %}">
-{#    <link rel="stylesheet" href="{% static '/css/bootstrap.css' %}">#}
     <link rel="stylesheet" href="{% static '/css/materialize.css' %}">
-{#    <font rel="s" href="">#}
-{#    <script src="{% static '/js/bootstrap.js' %}"></script>#}
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script src="{% static '/js/jQuery.js' %}"></script>
     <script src="{% static '/js/jquery-rango.js' %}"></script>
     <script src="{% static '/js/materialize.js' %}"></script>
     <script src="{% static '/js/base.js' %}"></script>
@@ -27,10 +26,6 @@
   </head>
 
   <body class="grey lighten-2">
-{#        <ul id="dropdown1" class="dropdown-content">#}
-{#            <li><a href="{% url 'conversations:friends' %}">Friends</a></li>#}
-{#            <li><a href="#!">Messages</a></li>#}
-{#        </ul>#}
 
         <ul id="conversationsdd" class="dropdown-content">
             <li><a href="#!">Friends</a></li>
