--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -28,8 +28,8 @@
   <body class="grey lighten-2">
 
         <ul id="conversationsdd" class="dropdown-content">
-            <li><a href="#!">Friends</a></li>
-            <li><a href="#!">Messages</a></li>
+            <li><a href="{% url 'conversations:friends' %}">Friends</a></li>
+            <li><a href="{% url 'conversations:messages' %}">Messages</a></li>
         </ul>
     <nav >
     <div class="nav-wrapper light-blue accent-4" >
